--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = build/ffi
 	url = git@github.com:cn00/luaffifb.git
 [submodule "build/p7zip/p7zip"]
-	path = build/p7zip/p7zip
+	path = build/p7zip
 	url = git@github.com:cn00/7z.git
 [submodule "build/libexpat"]
 	path = build/libexpat
