--- a/General/vs2013/XLua.Mini.csproj
+++ b/General/vs2013/XLua.Mini.csproj
@@ -7,11 +7,11 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <OutputPath>$(SolutionDir)/bin</OutputPath>
+      <OutputPath>bin/</OutputPath>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-      <OutputPath>$(SolutionDir)/bin</OutputPath>
+      <OutputPath>bin/</OutputPath>
     </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Cecil, Version=0.9.6.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756">
