rename submodule mariadb-connector-c

--- a/.gitmodules
+++ b/.gitmodules
@@ -20,5 +20,5 @@
 	path = build/nslua
 	url = https://github.com/cn00/NSLua.git
 [submodule "build/mariadb"]
-	path = build/mariadb-connector
+	path = build/mariadb-connector-c
 	url = git@github.com:cn00/mariadb-connector-c.git
